--- a/src/expr/Cargo.toml
+++ b/src/expr/Cargo.toml
@@ -5,6 +5,10 @@ version = "0.0.0"
 edition = "2021"
 publish = false
 
+[[bench]]
+name = "like_pattern"
+harness = false
+
 [dependencies]
 aho-corasick = "0.7.18"
 anyhow = "1.0.52"
@@ -37,6 +41,7 @@ uuid = "0.8.2"
 paste = "1"
 
 [dev-dependencies]
+criterion = { git = "https://github.com/MaterializeInc/criterion.rs.git" }
 datadriven = "0.6.0"
 expr_test_util = { path = "../expr-test-util"}
 ore = { path = "../ore" }
