--- a/src/expr/Cargo.toml
+++ b/src/expr/Cargo.toml
@@ -34,6 +34,7 @@ regex-syntax = "0.6.25"
 repr = { path = "../repr" }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
+serde_regex = "1.1.0"
 sha-1 = "0.10.0"
 sha2 = "0.10.1"
 uncased = "0.9.6"
