--- a/src/interchange/Cargo.toml
+++ b/src/interchange/Cargo.toml
@@ -29,6 +29,7 @@ num-traits = "0.2.14"
 ordered-float = { version = "2.10.0", features = ["serde"] }
 ore = { path = "../ore" }
 protobuf = { git = "https://github.com/MaterializeInc/rust-protobuf.git" }
+protobuf-native = "0.2.1"
 mz-protoc = { path = "../protoc" }
 regex = "1.5.4"
 repr = { path = "../repr" }
